--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -4,7 +4,7 @@
 <body>
 {% include menu.html %}
 <div>
-  <a class="sidebar-toggler fixed top right" style="margin: 11px 6px;" href="#"><span>Toggle menu</span></a>
+  <a class="sidebar-toggler fixed top right" onClick="toggleSidebar();" style="margin: 11px 6px;"><span>Toggle menu</span></a>
   <div class="container">
     <div class="br"></div>
     <h1 class="centered">{{ page.title }}</h1>
