Add default table style.

--- a/src/scss/_config.scss
+++ b/src/scss/_config.scss
@@ -57,6 +57,7 @@ $colors: (
 
 $color-default:     'black';          // Will be used for text
 $color-main:        'blue-dark2';     // Will be used for headlines, links and as default-color for buttons
+$color-active:      'blue';           // Will be used for hover states
 
 $gradients: (
   'linear': (),
