--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,6 +7,7 @@
     s.classList.toggle('open');
     s.classList.toggle('closed');
     st.classList.toggle('close');
+    document.body.classList.toggle('no-scrolling-small');
     return false;
   };
 </script>
