--- a/src/scss/_config.scss
+++ b/src/scss/_config.scss
@@ -18,11 +18,12 @@ $font-size:               1.4rem;
 $font-size-big:           1.6rem;
 $line-height-small:       120%;
 $line-height:             150%;
+$line-height-medium:      200%;
 $line-height-big:         220%;
 $line-height-large:       260%;
 
-$font-size-h1:            5.0rem;
-$font-size-h2:            3.5rem;
+$font-size-h1:            4.0rem;
+$font-size-h2:            3rem;
 $font-size-h3:            2.5rem;
 $font-size-h4:            2.0rem;
 $font-size-h5:            1.4rem;
