--- a/src/scss/elements/_icon.scss
+++ b/src/scss/elements/_icon.scss
@@ -6,6 +6,11 @@
   margin-bottom: 2px;
 }
 
+.huge > #{$u-prefix}.icon , #{$u-prefix}.icon.huge {
+  width: 40px;
+  height: 40px;
+}
+
 .big > #{$u-prefix}.icon , #{$u-prefix}.icon.big {
   width: 20px;
   height: 20px;
