--- a/src/scss/elements/_list.scss
+++ b/src/scss/elements/_list.scss
@@ -1,43 +1,52 @@
 
-#{$u-prefix}.list {
-  padding: 5px 0;
-  list-style: none;
+#{$u-prefix}.list-module {
 
-  li {
-    margin: 0;
-    padding: 0;
+  .filter {
+    position: relative;
+    min-height: 28px;
+
+    .filter-toggle {
+      position: absolute;
+      top: 0;
+      right: 0;
+    }
   }
 
-  #{$u-prefix}.item {
-    text-align: left;
-    margin: 0;
-    padding: 5px 20px;
-    text-decoration: none;
-    display: block;
-    @include transition(color 0.2s ease-out);
-    position: relative;
-    @include colors(true);
-    @include colors(false, false, true, false, ".", ":before");
+  .list {
+    border-top: 2px solid map-get($colors, 'grey-light');
+    border-bottom: 2px solid map-get($colors, 'grey-light');
 
-    &:before {
-        content: "";
-        display: block;
-        opacity: 0;
-        position: absolute;
-        height: 8px;
-        width: 8px;
-        top: 50%;
-        margin-top: -4px;
-        left: 6px;
-        border-radius: 10px;
-        @include transition(opacity 0.2s ease-out);
-        background: map-get($colors, $color-main);
+    .item {
+      padding: 10px 15px;
+      border-bottom: 1px solid map-get($colors, 'grey-light');
+
+      @include media($query-medium) {
+        padding-right: 0;
+        padding-left: 0;
       }
 
-    &.active {
-      &:before {
-        opacity: 1;
+      &:last-child {
+        border-bottom: none;
+      }
+
+      > h1, h2, h3, h4, h5, h6, p, #{$u-prefix}.buttons {
+        margin: 0 0 0 10px;
+
+        &:first-child {
+          margin-left: 0;
+        }
+      }
+
+      > #{$u-prefix}.buttons #{$u-prefix}.button {
+        margin-top: 0;
+        margin-bottom: 0;
+      }
+
+      &.flex {
+        @include display(flex);
+        @include align-items(center);
       }
     }
   }
+
 }
