--- a/src/scss/base/_form.scss
+++ b/src/scss/base/_form.scss
@@ -9,7 +9,7 @@ button, input[type="submit"], input[type="button"], input[type="reset"] {
   @extend %button;
 }
 
-input:not([type="submit"]):not([type="button"]):not([type="reset"]):not([type="checkbox"]):not([type="radio"]), textarea {
+input:not([type="submit"]):not([type="button"]):not([type="reset"]):not([type="checkbox"]):not([type="radio"]), textarea, select {
   border: 1px solid map-get($colors, 'grey-light');
   color: map-get($colors, $color-main);
   background: map-get($colors, 'white');
@@ -45,6 +45,11 @@ input:not([type="submit"]):not([type="button"]):not([type="reset"]):not([type="c
   }
 }
 
+select {
+  -webkit-appearance: menulist;
+  height: 34px;
+}
+
 input[type="checkbox"], input[type="radio"] {
   width: auto;
   min-width: auto;
@@ -65,4 +70,18 @@ textarea {
   line-height: $line-height;
   padding: 5px 10px;
   min-height: 100px;
+}
+
+fieldset {
+  border: none;
+  padding: 0;
+  margin: 25px 0;
+}
+
+legend {
+  font-size: $font-size-h4;
+  border-bottom: 2px solid map-get($colors, 'grey-light');
+  width: 100%;
+  padding: 15px 0;
+  margin-bottom: 10px;
 }
