--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,4 +10,9 @@
     document.body.classList.toggle('no-scrolling-small');
     return false;
   };
+
+  var toggleFilter = function(){
+    document.getElementsByClassName('filter')[0].classList.toggle('open');
+    return false;
+  };
 </script>
